--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    You just a brand new car $name
+    You just won a brand new car $name
   </body>
 </html>
